[package]
description = "A .rune file parser which generates a `RuneFileDescription` parsing tree, and which in turn can be used to generate source code for Rune messages"
edition = "2021"
license = "MIT"
name = "rune_parser"
readme = "README.MD"
repository = "https://github.com/NicolasDandanell/rune_parser"
version = "0.6.0"
